# finances_shared

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 0485b5168517_add_statements_table.py  307d0a908109_create_accounts_table.py  6ef8c48bf3d4_add_tags_table_and_many_to_many_.py  90e2fa363428_statement_add_tzinfo.py  ca81908cc74f_statement_connect_to_accounts.py
src/finances_shared/: __init__.py  db.py  params.py
src/finances_shared/models/: __init__.py  account.py  models.py  statement.py
src/finances_shared/rabbitmq/: __init__.py  listener.py  producer.py
