[project]
name = "finances-shared"
version = "0.3.1"
description = ""
authors = [{ name = "Mate Csornyei", email = "mate@csornyei.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-json-logger (>=3.3.0,<4.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.11.5,<0.12.0)",
    "black (>=25.1.0,<25.2.0)",
    "isort (>=6.0.1,<6.1.0)",
]

[tool.ruff]
target-version = "py313"


[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
